fix: the overflow of condition fields layout

--- a/src/routes/Plugin/index.less
+++ b/src/routes/Plugin/index.less
@@ -33,31 +33,9 @@
 
 .condition {
   margin-top: 8px;
-  display: flex;
-  .header {
-    text-align: right;
-    width: 100px;
-    margin-bottom: 0;
-    font-size: 14px;
-    strong {
-      color: #f5222d;
-      margin-right: 4px;
-      font-weight: normal;
-    }
-  }
-  ul {
-    padding: 0 0 10px 6px;
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-    max-height: 200px;
-    overflow: hidden;
-    li {
-      margin-right: 4px;
-    }
-  }
-  button {
-    margin-left: 10px;
+
+  .addButton {
+    width: 100%;
   }
 }
 
